--- a/sample_mobile/src/main/res/layout/fragment_test.xml
+++ b/sample_mobile/src/main/res/layout/fragment_test.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="android.code.wing.sample_mobile.MainActivity">
+    tools:context="com.code.wing.sample_mobile.MainActivity">
 
     <TextView
         android:id="@+id/tv_1"
